<resources>
    <string name="app_name">First App</string>
    <string name="that_s_my_first_app">That\'s My First App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_up_big">SIGN UP</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="let_s_create_your_account">Let\'s create your account!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="or">OR</string>
    <string name="you_made_it">You Made It!</string>
    <string name="this_is_main_page">This is Main Page</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="log_out">LOG OUT</string>
    <string name="cagatay">Enes Çağatay SÖZEN</string>
    <string name="home">Home</string>
    <string name="reset_password">Reset Password</string>
    <string name="text_reset_pass">Enter your email and we\'ll send you a link to get back into your account.</string>
    <string name="back_to_login">Back To login</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="trouble_logging_in">Trouble Logging In?</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone Number</string>
    <string name="name_surname"><![CDATA[Name & Surname]]></string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="cagatav">Enes Çağatay SÖZEN</string>
    <string name="onbackpress_again">Çıkmak İçin Tekrar Basın</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile1">Edit Profile</string>
    <string name="register">REGISTER</string>
</resources>