<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingLeft="20dp"
    android:paddingTop="10dp"
    android:paddingRight="20dp"
    tools:context=".ForgotPasswordActivity">
    <TextView
        android:id="@+id/appname"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="50dp"
        android:background="@drawable/shapeloginbutton"
        android:gravity="center"

        android:text="@string/that_s_my_first_app"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        />
    <ImageView
        android:id="@+id/icon"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_below="@id/appname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:src="@drawable/appicon"
        />
    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/trouble_logging_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_marginHorizontal="50dp"
        android:gravity="center"
        android:text="@string/text_reset_pass"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="normal"
        />
    <EditText
        android:id="@+id/resetPassEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shapebackground"
        android:drawableStart="@drawable/id"
        android:drawablePadding="20dp"
        android:drawableTint="@color/gold"
        android:hint="@string/email"
        android:padding="20dp"
        android:textColorHint="@color/white"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resetPassBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resetPassEmail"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shapeloginbutton"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resetPassLoginBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resetPassBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/back_to_login"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resetPassLoginBtn"
        android:layout_marginHorizontal="50dp"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="@color/gold"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/resetPassCreateAccBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text3"
        android:layout_centerHorizontal="true"
        android:text="@string/create_new_account"
        android:textColor="@color/white" />
</RelativeLayout>