<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp">
        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="50dp"
            android:background="@drawable/shapeloginbutton"
            android:gravity="center"
            android:text="@string/that_s_my_first_app"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"/>
        <ImageView
            android:id="@+id/loginImg"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:layout_below="@id/loginTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:src="@drawable/appicon"/>
        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginImg"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shapebackground"
            android:drawableStart="@drawable/id"
            android:drawablePadding="20dp"
            android:drawableTint="@color/gold"
            android:hint="@string/email"
            android:padding="20dp"
            android:textColorHint="@color/white"/>
        <EditText
            android:id="@+id/loginPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginEmail"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shapebackground"
            android:drawableStart="@drawable/key"
            android:drawablePadding="20dp"
            android:drawableTint="@color/gold"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColorHint="@color/white"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginPass"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/shapeloginbutton"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="visible"/>
        <ProgressBar
            android:id="@+id/loginProgressBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/loginPass"
            android:visibility="gone"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginResetPass"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginBtn"
            android:layout_centerHorizontal="true"
            android:text="@string/forgot_password"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/ortext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginResetPass"
            android:layout_centerHorizontal="true"
            android:text="@string/or"
            android:textColor="@color/gold"
            android:textStyle="bold"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginRegisterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ortext"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/shapeloginbutton"
            android:text="@string/register"
            android:textColor="@color/white"/>
    </RelativeLayout>
</layout>