<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
            name="user"
            type="com.example.thatsmyfirstapp.data.model.UserModel" />

    </data>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:clickable="true"
    android:paddingLeft="20dp"
    android:paddingTop="10dp"
    android:paddingRight="20dp"
    tools:context=".fragment.ProfileFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/profile"
        android:textColor="@color/gold"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="45dp"
        android:background="@color/gold"/>

    <ImageView
        android:id="@+id/profileImg"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_below="@id/line1"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/profileico" />

    <TextView
        android:id="@+id/profileEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileImg"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shapebackground"
        android:drawablePadding="20dp"
        android:hint="s190444038@stu.thk.edu.tr"
        android:padding="20dp"
        android:text="@{user.mail}"
        android:textColorHint="@color/white"
        app:drawableStartCompat="@drawable/mail"
        app:drawableTint="@color/gold" />
        <TextView
            android:id="@+id/profileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileEmail"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shapebackground"
            android:drawablePadding="20dp"
            android:hint="@string/cagatav"
            android:padding="20dp"
            android:text="@{user.fullname}"
            android:textColorHint="@color/white"
            app:drawableStartCompat="@drawable/name"
            app:drawableTint="@color/gold" />

    <TextView
        android:id="@+id/profilePhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileName"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shapebackground"
        android:drawablePadding="20dp"
        android:hint="5075472472"
        android:padding="20dp"
        android:text="@{user.phone}"
        android:textColorHint="@color/white"
        app:drawableStartCompat="@drawable/phone"
        app:drawableTint="@color/gold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profileBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profilePhone"
            android:layout_marginHorizontal="75dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/shapeloginbutton"
            android:text="@string/edit_profile"
            android:textColor="@color/white"/>
</RelativeLayout>
</layout>